--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -6,14 +6,14 @@
 		<div class="grid">
 
 			{# Sidebar #}
-			<aside class="grid__item one-whole lap--one-third desk--one-quarter" role="complementary">
+			<aside class="grid__item one-whole tablet--one-third desktop--one-quarter" role="complementary">
 				{% block sidebar %}
 					Default sidebar content
 				{% endblock %}
 			</aside>
 
 			{# Main container #}
-			<article class="grid__item one-whole lap--two-thirds desk--three-quarters" role="main">
+			<article class="grid__item one-whole tablet--two-thirds desktop--three-quarters" role="main">
 				{% block main %}
 					Default body content
 				{% endblock %}
