--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -88,10 +88,10 @@
 
 		{% example "html" -%}
 			<div class="grid">
-				<div class="grid__item one-half palm--one-whole">
+				<div class="grid__item one-whole tablet--one-half">
 					<img src="//placehold.it/640x360" alt="A placeholder" />
 				</div>
-				<div class="grid__item one-half palm--one-whole">
+				<div class="grid__item one-whole tablet--one-half">
 					<blockquote>
 						<p>This is a quotation inside a grid</p>
 						<footer>
