--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+
 	<title>{{ title }} | NICE Experience</title>
+
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
