--- a/src/stylesheets/settings/_typography.scss
+++ b/src/stylesheets/settings/_typography.scss
@@ -2,8 +2,11 @@
 /// @group Typography
 ////
 
-/// The font families in use
-/// @prop {String} sans [Lato, Helvetica Neue, Helvetica, Arial, sans-serif] The sans-serif font stack
+/// The font families in use across NICE.
+/// @prop {Font stack} sans [Lato, Helvetica Neue, Helvetica, Arial, sans-serif] The sans-serif font stack
+/// @prop {Font stack} serif [Georgia, "Times New Roman", Times, serif] The serif font stack
+/// @prop {Font stack} mono [Monaco, Menlo, Consolas, "Courier New", monospace] The monospace font stack
+/// @see font-family
 $font-families: (
 	sans: '"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif',
 	serif: 'Georgia, "Times New Roman", Times, serif',
