--- a/web/server/views/sass/docs.njk
+++ b/web/server/views/sass/docs.njk
@@ -8,31 +8,29 @@
 
 {% block main %}
 
+	<h1>SASS Documentation</h1>
+
 	{# Loop over the groups #}
 	{% for group_name, group in byGroupAndType %}
-		<section class="main__section">
-			<h1 class="main__heading" id="{{ group_name }}">
-				<div class="container">
-					{{ groups[group_name] }}
-				</div>
-			</h1>
+		<section>
+			<h2 id="{{ group_name }}">
+				{{ groups[group_name] }}
+			</h2>
 
 			{# Loop over the types #}
 			{% for type, items in group %}
 
 				{# If items to be displayed in type #}
 				{% if items.length > 0 %}
-					<section class="main__sub-section" id="{{ group_name }}-{{ type }}">
-						<h2 class="main__heading--secondary">
-							<div class="container">
-								{% if type == "css" %}
-									{# Special case for CSS selectors #}
-									Selectors
-								{% else %}
-									{{ type | pluralize | capitalize }}
-								{% endif %}
-							</div>
-						</h2>
+					<section id="{{ group_name }}-{{ type }}">
+						<h3>
+							{% if type == "css" %}
+								{# Special case for CSS selectors #}
+								Selectors
+							{% else %}
+								{{ type | pluralize | capitalize }}
+							{% endif %}
+						</h3>
 
 						{# Loop over the items #}
 						{% for item in items %}
