--- a/web/server/views/sass/includes/annotations/return.njk
+++ b/web/server/views/sass/includes/annotations/return.njk
@@ -1,12 +1,14 @@
 {% if item.return %}
-  <h3 class="item__sub-heading">Returns</h3>
+	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+		<h5>Returns</h5>
 
-  <div class="item__description  item__description--inline">
-  {% if item.return.type == '*' %}
-    Any type
-  {% else %}
-    <code>{{ item.return.type | display_as_type }}</code>
-  {% endif %}
-  {% if item.return.description %} &mdash; {{ item.return.description|safe }}{% endif %}
-  </div>
+		<p>
+			{% if item.return.type == '*' %}
+				Any type
+			{% else %}
+				<code>{{ item.return.type | display_as_type }}</code>
+			{% endif %}
+			{% if item.return.description %} &mdash; {{ item.return.description|striptags }}{% endif %}
+		</p>
+	</div>
 {% endif %}
