--- a/src/stylesheets/settings/_colours.scss
+++ b/src/stylesheets/settings/_colours.scss
@@ -1,32 +1,171 @@
+////
+/// @group colors
+////
+
 // Extremes
 $black: #000;
 $white: #fff;
-// Greys
-$dark-grey: #262626;
-$mid-grey: #dfe0e2;
-$light-grey: #efefef;
-// Greens
-$dark-green: #043d4e;
-$light-green: #59afa9;
-$bright-green: #1a9908;
-// Blue-green
-$blue-green: #11779b;
-$bright-blue-green: #0189b6;
-// Blues
-$dark-blue: #264965;
-$mid-blue: #2f577a;
-$light-blue: #66c2ff;
-$bright-blue: #1167b7;
-// Oranges
-$orange: #f5b805;
-// Reds/pinks
-$red: #f00;
-$pink: #d53880;
-$light-pink: #fef7f7;
-// Purples
-/// A colour variable.
-/// Purple. Used for BNF.
-$purple: #82176f;	// See BNF
+
+/// The base colour for grey
+$colour-base-grey: #e5e7ea;
+
+/// The base colour for orange
+$colour-base-orange: #f5b805;
+
+/// The base colour for red
+$colour-base-red: #f00;
+
+/// The base colour for purple
+$colour-base-purple: #82176f;
+
+/// The base colour for blue
+$colour-base-blue: #2f577a;
+
+/// The base colour for pink
+$colour-base-pink: #d53880;
+
+/// Purple colour palette
+/// @prop {Color} base [$colour-base-purple] Base purple colour
+$palette-purple: (
+	base: $colour-base-purple // E.g. BNF
+);
+
+/// Grey colour palette
+/// @prop {Color} light [#efefef] Light grey
+/// @prop {Color} mid-light [#dfe0e2] Mid-light grey
+/// @prop {Color} base [$colour-base-grey] Mid-light grey
+/// @prop {Color} dark [#262626] Dark grey
+$palette-grey: (
+	light: #efefef,
+	mid-light: #dfe0e2,
+	base: $colour-base-grey,
+	mid-dark: #4a4a4a,
+	dark: #262626
+);
+
+/// Green colour palette
+/// @prop {Color} light [#1a9908] Light green, used for primary buttons
+/// @prop {Color} base [#5cb85c] Base green
+/// @prop {Color} dark [#449d44] Dark green
+$palette-green: (
+	light: #1a9908, // E.g. primary buttons
+	base: #5cb85c,
+	dark: #449d44
+);
+
+/// Blue colour palette
+/// @prop {Color} x-light [#66c2ff] Extra-light blue
+/// @prop {Color} light [#1167b7] Light blue
+/// @prop {Color} base [$colour-base-blue] Base blue
+/// @prop {Color} dark [#264965] Dark blue
+$palette-blue: (
+	x-light: #66c2ff,
+	light: #1167b7,
+	base: $colour-base-blue,
+	dark: #264965
+);
+
+/// Orange palette
+/// @prop {Color} base [$colour-base-orange] Base orange
+$palette-orange: (
+	base: $colour-base-orange
+);
+
+/// Red palette
+/// @prop {Color} base [$colour-base-red] Base red
+$palette-red: (
+	base: $colour-base-red
+);
+
+/// Pink palette
+/// @prop {Color} light [#fef7f7] Light pink
+/// @prop {Color} base [$colour-base-pink] Base pink
+$palette-pink: (
+	light: #fef7f7,
+	base: $colour-base-pink
+);
+
+/// A map of colour name -> palette.
+/// The keys are used to get a colour via the `get-colour` function
+/// @prop {Map} purple Purple colour palette
+/// @see get-colour
+$palettes: (
+	purple: $palette-purple,
+	grey: $palette-grey,
+	green: $palette-green,
+	blue: $palette-blue,
+	orange: $palette-orange,
+	red: $palette-red,
+	pink: $palette-pink
+);
+
+/// Possible tones that can be used for colour mapping
+/// @see get-colour
+$tones: (
+	x-dark: (
+		function: darken,
+		args: 30%
+	),
+	dark: (
+		function: darken,
+		args: 20%
+	),
+	mid-dark: (
+		function: darken,
+		args: 10%
+	),
+	base,
+	mid-light: (
+		function: lighten,
+		args: 10%
+	),
+	light: (
+		function: lighten,
+		args: 20%
+	),
+	x-light: (
+		function: lighten,
+		args: 30%
+	)
+);
+
+/// Gets a colour value from a given name and optional tone.
+/// If the tone variant isn't explicitly declared in the `$palettes` map
+/// then the function from the `$tones` is used as a fallback.
+/// @param {String} $palette The colour palette to get, e.g. red
+/// @param {String} $tone The optional tone variant, one of the `$tones` values
+/// @see $tones
+/// @see $palettes
+/// @link http://erskinedesign.com/blog/friendlier-colour-names-sass-maps/ Colour map structure inspired from Erskine Design
+/// @link https://www.sitepoint.com/managing-color-values-with-sass/ Function borrowed from SitePoint
+@function get-colour($palette, $tone: 'base') {
+	@if map-has-key($palettes, $palette) {
+
+		$colour: map-get($palettes, $palette);
+
+		@if map-has-key($colour, $tone) {
+			@return map-get($colour, $tone);
+		}
+
+		@warn 'Tone #{$tone} could not be found in colour #{$palette}. Auto-toning instead';
+
+		@if map-has-key($tones, $tone) {
+			$base-colour: map-get($colour, base);
+			$this-tone: map-get($tones, $tone);
+			$function: map-get($this-tone, function);
+
+			$args: ();
+			@if map-get($this-tone, args) {
+				$args: join($args, map-get($this-tone, args));
+			}
+			@return call($function, $base-colour, $args...);
+		}
+
+		@error "Invalid `$tone`: #{$tone}. Must be one of $tones.";
+	}
+
+	@error 'Palette #{$palette} could not be found';
+}
 
 
 // Semantic colour names
@@ -44,9 +183,13 @@ $purple: #82176f;	// See BNF
 // $highlight-colour: $grey-4;			// Table stripes etc.
 // $page-colour: $white;				// The page
 // $discovery-colour: $fuschia;			// Discovery badges and banners
-$alpha-colour: $pink;				// Alpha badges and banners
-$beta-colour: $orange;				// Beta badges and banners
+$alpha-colour: get-colour(pink);				// Alpha badges and banners
+$beta-colour: get-colour(orange);				// Beta badges and banners
 // $live-colour: $grass-green;			// Live badges and banners
 // $banner-text-colour: #000;			// Text colour for Alpha & Beta banners
-$error-colour: $red;					// Error text and border colour
-$error-background: $light-pink;			// Error background colour
+$error-colour: get-colour(red);					// Error text and border colour
+$error-background: get-colour(red, x-light);			// Error background colour
+
+.error-bg {
+	background: $error-background;
+}
