--- a/web/server/views/sass/includes/annotations/link.njk
+++ b/web/server/views/sass/includes/annotations/link.njk
@@ -1,17 +1,19 @@
 {% if item.link.length > 0 %}
-  <h3 class="item__sub-heading">Links</h3>
+	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+		<h5>Links</h5>
 
-  <ul class="list-unstyled">
-  {% for link in item.link %}
-    <li>
-      <a href="{{ link.url }}">
-        {% if link.caption %}
-          {{ link.caption }}
-        {% else %}
-          {{ link.url }}
-        {% endif %}
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
+		<ul>
+			{% for link in item.link %}
+			<li>
+				<a href="{{ link.url }}">
+					{% if link.caption %}
+						{{ link.caption }}
+					{% else %}
+						{{ link.url }}
+					{% endif %}
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 {% endif %}
