--- a/web/server/views/sass/includes/annotations/property.njk
+++ b/web/server/views/sass/includes/annotations/property.njk
@@ -1,8 +1,8 @@
 {% if item.property.length > 0 %}
 
-<h3 class="item__sub-heading">Map structure</h3>
+<h5>Map structure</h5>
 
-<table class="item__parameters">
+<table>
 	<thead>
 		<tr>
 			<th scope="col"><span class="visually-hidden">{{ item.type }} key </span>Name</th>
@@ -14,7 +14,7 @@
 
 	<tbody>
 		{% for prop in item.property %}
-		<tr class="item__parameter">
+		<tr>
 			<th scope="row" data-label="name">
 				<code>{{ prop.name }}</code>
 			</th>
