--- a/web/server/views/sass/includes/annotations/since.njk
+++ b/web/server/views/sass/includes/annotations/since.njk
@@ -1,9 +1,16 @@
 {% if item.since.length > 1 %}
-  <h3 class="item__sub-heading">Changelog</h3>
+	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+		<h5>Changelog</h5>
 
-  <ul class="list-unstyled">
-    {% for since in item.since %}
-      <li>{{ since.version }}{% if since.description %} &mdash; {{ since.description|safe }}{% endif %}</li>
-    {% endfor %}
-  </ul>
+		<ul>
+			{% for since in item.since %}
+				<li>
+					{{ since.version }}
+					{% if since.description %}
+						&mdash; {{ since.description|safe }}
+					{% endif %}
+				</li>
+			{% endfor %}
+		</ul>
+	</div>
 {% endif %}
