--- a/web/server/views/sass/includes/annotations/throw.njk
+++ b/web/server/views/sass/includes/annotations/throw.njk
@@ -1,9 +1,11 @@
 {% if item.throw.length > 0 %}
-  <h3 class="item__sub-heading">Throws</h3>
+	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+		<h5>Throws</h5>
 
-  <ul class="list-unstyled">
-    {% for _throw in item.throw %}
-      <li>{{ _throw|safe }}</li>
-    {% endfor %}
-  </ul>
+		<ul>
+			{% for _throw in item.throw %}
+				<li>{{ _throw|safe }}</li>
+			{% endfor %}
+		</ul>
+	</div>
 {% endif %}
