--- a/web/server/views/sass/includes/annotations/todo.njk
+++ b/web/server/views/sass/includes/annotations/todo.njk
@@ -1,9 +1,11 @@
 {% if item.todo.length > 0 %}
-  <h3 class="item__sub-heading">TODO's</h3>
+	<div class="grid__item one-whole tablet--one-half desktop--one-third">
+		<h5>TODO's</h5>
 
-  <ul class="list-unstyled">
-    {% for todo in item.todo %}
-      <li>{{ todo|safe }}</li>
-    {% endfor %}
-  </ul>
+		<ul>
+			{% for todo in item.todo %}
+				<li>{{ todo|safe }}</li>
+			{% endfor %}
+		</ul>
+	</div>
 {% endif %}
