--- a/web/server/views/sass/includes/annotations/usedby.njk
+++ b/web/server/views/sass/includes/annotations/usedby.njk
@@ -6,7 +6,7 @@
 
     {% if not title_displayed %}
       {% set title_displayed = true %}
-      <h3 class="item__sub-heading">Used by</h3>
+      <h5>Used by</h5>
       <ul class="list-unstyled">
     {% endif %}
 
