--- a/web/server/views/sass/includes/partials/item.njk
+++ b/web/server/views/sass/includes/partials/item.njk
@@ -1,22 +1,30 @@
-<section class="main__item  container  item{% if item.alias %}  item--alias{% endif %}{% if 'deprecated'|in(item) %}  item--deprecated{% endif %}" id="{{ group_name }}-{{ item.context.type }}-{{ item.context.name }}">
+<section id="{{ group_name }}-{{ item.context.type }}-{{ item.context.name }}">
 
-	{% include 'sass/includes/annotations/name.njk' %}
+	{% include '../annotations/name.njk' %}
 
-	{% include 'sass/includes/annotations/deprecated.njk' %}
+	{% include '../annotations/deprecated.njk' %}
 
-	{% include 'sass/includes/annotations/preview.njk' %}
+	{% include '../annotations/preview.njk' %}
+
+	{% include "../annotations/parameter.njk" %}
+
+	{% include "../annotations/property.njk" %}
 
 	{% if not item.alias %}
 
-	  {% for annotation in display.annotations[item.context.type] %}
-	    {% set path = '../annotations/' + annotation + '.njk' %}
-	    {% include path %}
-	  {% endfor %}
+		<div class="grid">
+			{% for annotation in display.annotations[item.context.type] %}
+				{% set path = '../annotations/' + annotation + '.njk' %}
+					{% include path %}
+			{% endfor %}
+		</div>
 
 	{% else %}
 
-	  <p>Refer to <a href="#{{ item.context.type }}-{{ item.alias }}">{{ item.alias }}</a>.</p>
+		<p>Refer to <a href="#{{ item.context.type }}-{{ item.alias }}">{{ item.alias }}</a>.</p>
 
 	{% endif %}
+
+	{% include "../annotations/example.njk" %}
 
 </section>
