--- a/web/client/stylesheets/components/_example.scss
+++ b/web/client/stylesheets/components/_example.scss
@@ -25,7 +25,7 @@
 	&__body {
 		border-bottom: 1px solid #e1e1e8;
 		margin: 0;
-		padding: 8px;
+		padding: 20px 8px 8px 8px;
 		position: relative;
 	}
 
