--- a/src/stylesheets/helpers/hacks/_hacks.scss
+++ b/src/stylesheets/helpers/hacks/_hacks.scss
@@ -26,3 +26,10 @@
 	}
 }
 
+/// Fix unwanted button padding in Firefox
+@mixin remove-moz-focus-inner {
+	&:moz-focus-inner {
+		border: 0;
+		padding: 0;
+	}
+}
