Add phase banner and tag for alpha/beta using semantic colour names

--- a/src/stylesheets/_bootstrap.scss
+++ b/src/stylesheets/_bootstrap.scss
@@ -20,6 +20,7 @@
 @import 'typography/typography';
 
 // Components
+@import 'components/global';
 @import 'components/panel';
 @import 'components/tables';
 @import 'components/buttons';
