--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -15,6 +15,17 @@
 </head>
 <body>
 
+	<div class="container">
+		<p class="phase-banner">
+			<span class="phase-banner__tag">
+				<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
+			</span>
+			<span class="phase-banner__label">
+				NICE Experience is in development. This means there it isn't feature complete and there will be issues. Find any? Please, let us know!
+			</span>
+		</p>
+	</div>
+
 	<header>
 		<nav role="nav">
 			<ul>
@@ -25,13 +36,6 @@
 			</ul>
 		</nav>
 	</header>
-
-	<div class="phase-banner-alpha">
-		<p>
-			<strong class="phase-tag">ALPHA</strong>
-			<span>NICE Experience is in development.</span>
-		</p>
-	</div>
 
 	{% block body %}
 		This is the default body content
