Add large button modifier and example of buttons side-by-side

--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -123,8 +123,14 @@
 			<div class="panel panel--dark">
 				<p><button type="button" class="btn">Default button</button></p>
 				<p><a href="#" class="btn btn--primary">Primary button</a></p>
+				<p><button type="button" class="btn btn--primary btn--lg">Primary button, large</button></p>
 			</div>
 			<p><button type="button" class="btn btn--secondary">Subtle secondary</button></p>
+			<p><button type="button" class="btn btn--lg">Default button, large</button></p>
+			<p>
+				<button type="button" class="btn">Default button</button>
+				<button type="button" class="btn btn--secondary">Subtle secondary</button>
+			</p>
 		{%- endexample %}
 	</section>
 
