--- a/web/server/views/404.njk
+++ b/web/server/views/404.njk
@@ -3,8 +3,10 @@
 
 {% block body %}
 
-	<h1>Page not found</h1>
+	<div class="container">
+		<h1>Page not found</h1>
 
-	<p>Sorry, that page could not be found</p>
+		<p>Sorry, that page could not be found</p>
+	</div>
 
 {% endblock %}
