--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -1,6 +1,15 @@
 {% extends "layouts/_layout.njk" %}
 {% set title = "NICE Bootstrap v2" %}
 
+{% macro item(title, href, description) %}
+	<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+		<h4><a href="{{ href }}">{{ title }}</a></h4>
+		<p>
+			{{ description }}
+		</p>
+	</div>
+{% endmacro %}
+
 {% block body %}
 
 	<div>
@@ -25,28 +34,74 @@
 
 	<div class="container">
 		<h1>Welcome to NICE Experience</h1>
-		<h2>Modern, semantic &amp; accessible</h2>
+		<h2 class="p">Your source for creating beautiful, consistent experiences across NICE</h2>
+
+		<h3 class="heading heading--separator">Style Library</h3>
+
+		<p>The foundations and patterns that are to be used for faster product development.</p>
 
 		<div class="grid">
-			<div class="grid__item one-whole tablet--one-half desktop--one-third">
-				<h3>What is it?</h3>
+
+			{{ item("Layout", "/style-guide/layout", "Containers, grid and layouts") }}
+
+			{{ item("Typography", "/style-guide/typography", "Headings, paragraphs, featured text, quotations, lists, links") }}
+
+			{{ item("Buttons", "/style-guide/buttons", "Button text, button blocks") }}
+
+			{{ item("Colour", "/style-guide/colour", "Colour contrast, SASS variables, colour palettes") }}
+
+			{{ item("Buttons", "/style-guide/buttons", "Button text, button blocks") }}
+
+		</div>
+
+		<div class="panel">
+			<h3 class="heading heading--separator">UI Components</h3>
+
+			<p>Further patterns</p>
+
+			<div class="grid">
+
+				{{ item("Breadcrumbs", "/style-guide/breadcrumbs", "Secondary navigation scheme that reveals the user's location") }}
+
+				{{ item("Tabs", "/style-guide/tabs", "Content is separated into different panes, with only one pane viewable at a time.") }}
+
+			</div>
+		</div>
+
+		<h3 class="heading heading--separator">SASS</h3>
+
+		<p>We use SASS as our CSS pre-processor</p>
+
+		<div class="grid">
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/sass/syntax">Syntax</a></h4>
 				<p>
-					It's a modern replacement for <a href="http://nhsevidence.github.io/NICE.Bootstrap/" target="_blank">NICE.Bootstrap</a> and <a href="http://mattonfoot.github.io/NICE.UI/" target="_blank">NICE.UI</a> with improved tooling and documentation, allowing consistent and rapid prototyping for NICE online services and web applications.
+					Syntax and formatting
 				</p>
 			</div>
-			<div class="grid__item one-whole tablet--one-half desktop--one-third">
-				<h3>Not just another UI kit&hellip;</h3>
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/sass/naming">Naming</a></h4>
 				<p>
-					We haven't re-invented the wheel.
-					We've used our experience and borrowed &amp; adapted the best bits from <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> and GOV.UK's <a href="https://github.com/alphagov/govuk_frontend_toolkit" target="_blank">Front End Toolkit</a> &amp; <a href="http://govuk-elements.herokuapp.com/" target="_blank">Elements</a>.
+					Variable naming and BEM convention
 				</p>
 			</div>
-			<div class="grid__item one-whole tablet--one-half desktop--one-third">
-				<h3>Getting started</h3>
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/style-guide/layout">Layout</a></h4>
 				<p>
-					We've made it easy to extend and add to, and equally easy to integrate it into your application.
+					Grid unit proportions, gutters and spacing.
 				</p>
-				<a href="#" class="btn">Get started</a>
+			</div>
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/style-guide/colour">Colour</a></h4>
+				<p>
+					Colour contrast, Sass variables, colour palettes.
+				</p>
+			</div>
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/style-guide/colour">Colour</a></h4>
+				<p>
+					Colour contrast, Sass variables, colour palettes.
+				</p>
 			</div>
 		</div>
 
