--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -11,30 +11,31 @@
 		</p>
 
 		<div class="grid">
-			<div class="grid__item one-third lap--one-half palm--one-whole">
+			<div class="grid__item one-quarter lap--one-half palm--one-whole">
 				<h2><a href="/style-guide/layout">Layout</a></h2>
 				<p>
 					Grid unit proportions, gutters and spacing.
 				</p>
 			</div>
-			<div class="grid__item one-third lap--one-half palm--one-whole">
+			<div class="grid__item one-quarter lap--one-half palm--one-whole">
 				<h2><a href="/style-guide/typography">Typography</a></h2>
 				<p>
 					Headings, body text, links, lists, inset text, hidden text.
 				</p>
 			</div>
-			<div class="grid__item one-third lap--one-half palm--one-whole">
+			<div class="grid__item one-quarter lap--one-half palm--one-whole">
 				<h2><a href="/style-guide/colour">Colour</a></h2>
 				<p>
 					Colour contrast, Sass variables, colour palettes.
 				</p>
 			</div>
-			<div class="grid__item one-third lap--one-half palm--one-whole"></div>
-			<div class="grid__item one-third lap--one-half palm--one-whole"></div>
-			<div class="grid__item one-third lap--one-half palm--one-whole"></div>
-			<div class="grid__item one-third lap--one-half palm--one-whole"></div>
+			<div class="grid__item one-quarter lap--one-half palm--one-whole">
+				<h2><a href="/style-guide/components">Components</a></h2>
+				<p>
+					Breadcrumbs
+				</p>
+			</div>
 		</div>
 	</div>
 
 {% endblock %}
-
