Add more colour swatch data

--- a/web/server/views/style-guide/colour.njk
+++ b/web/server/views/style-guide/colour.njk
@@ -28,20 +28,75 @@
 	<section id="groups">
 		<h2>Palettes</h2>
 
+		<h3>Greys</h3>
+
+		<div class="swatch swatch--grey-x-light"></div>
+		<div class="swatch swatch--grey-light"></div>
+		<div class="swatch swatch--grey-mid-light"></div>
+		<div class="swatch swatch--grey-base"></div>
+		<div class="swatch swatch--grey-mid-dark"></div>
+		<div class="swatch swatch--grey-dark"></div>
+		<div class="swatch swatch--grey-x-dark"></div>
+
+		<h3>Greens</h3>
+
+		<div class="swatch swatch--green-x-light"></div>
+		<div class="swatch swatch--green-light"></div>
+		<div class="swatch swatch--green-mid-light"></div>
+		<div class="swatch swatch--green-base"></div>
+		<div class="swatch swatch--green-mid-dark"></div>
+		<div class="swatch swatch--green-dark"></div>
+		<div class="swatch swatch--green-x-dark"></div>
+
 		<h3>Oranges</h3>
 
+		<div class="swatch swatch--orange-x-light"></div>
+		<div class="swatch swatch--orange-light"></div>
+		<div class="swatch swatch--orange-mid-light"></div>
 		<div class="swatch swatch--orange-base"></div>
+		<div class="swatch swatch--orange-mid-dark"></div>
+		<div class="swatch swatch--orange-dark"></div>
+		<div class="swatch swatch--orange-x-dark"></div>
 
 		<h3>Blues</h3>
 
 		<div class="swatch swatch--blue-x-light"></div>
 		<div class="swatch swatch--blue-light"></div>
+		<div class="swatch swatch--blue-mid-light"></div>
 		<div class="swatch swatch--blue-base"></div>
+		<div class="swatch swatch--blue-mid-dark"></div>
 		<div class="swatch swatch--blue-dark"></div>
+		<div class="swatch swatch--blue-x-dark"></div>
 
 		<h3>Purples</h3>
 
+		<div class="swatch swatch--purple-x-light"></div>
+		<div class="swatch swatch--purple-light"></div>
+		<div class="swatch swatch--purple-mid-light"></div>
 		<div class="swatch swatch--purple-base"></div>
+		<div class="swatch swatch--purple-mid-dark"></div>
+		<div class="swatch swatch--purple-dark"></div>
+		<div class="swatch swatch--purple-x-dark"></div>
+
+		<h3>Reds</h3>
+
+		<div class="swatch swatch--red-x-light"></div>
+		<div class="swatch swatch--red-light"></div>
+		<div class="swatch swatch--red-mid-light"></div>
+		<div class="swatch swatch--red-base"></div>
+		<div class="swatch swatch--red-mid-dark"></div>
+		<div class="swatch swatch--red-dark"></div>
+		<div class="swatch swatch--red-x-dark"></div>
+
+		<h3>Pinks</h3>
+
+		<div class="swatch swatch--pink-x-light"></div>
+		<div class="swatch swatch--pink-light"></div>
+		<div class="swatch swatch--pink-mid-light"></div>
+		<div class="swatch swatch--pink-base"></div>
+		<div class="swatch swatch--pink-mid-dark"></div>
+		<div class="swatch swatch--pink-dark"></div>
+		<div class="swatch swatch--pink-x-dark"></div>
 
 	</section>
 
