--- a/web/server/views/sass/docs.njk
+++ b/web/server/views/sass/docs.njk
@@ -1,4 +1,4 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "sass-layout.njk" %}
 {% set title = "SASS Documentation" %}
 
 {% block sidebar %}
