--- a/web/server/views/style-guide/breadcrumbs.njk
+++ b/web/server/views/style-guide/breadcrumbs.njk
@@ -1,14 +1,5 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "./_style-guide-layout.njk" %}
 {% set title = "Breadcrumbs" %}
-
-{% block sidebar %}
-
-	<ul>
-		<li><a href="#breadcrumbs">Breadcrumbs</a></li>
-	</ul>
-
-{% endblock %}
-
 
 {% block main %}
 
