--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -1,4 +1,4 @@
-{% extends "../layouts/_layout.njk" %}
+{% extends "./_style-guide-layout.njk" %}
 {% set title = "Style guide" %}
 
 {% block body %}
