--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -1,12 +1,5 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "./_style-guide-layout.njk" %}
 {% set title = "Typography" %}
-
-{% block sidebar %}
-
-	{% include "partials/style-guide-nav.njk" %}
-
-{% endblock %}
-
 
 {% block main %}
 
