--- a/web/server/views/partials/style-guide-nav.njk
+++ b/web/server/views/partials/style-guide-nav.njk
@@ -1,7 +1,7 @@
 <nav>
 	<ul>
 		<li><a href="/style-guide">Style guide</a></li>
-		<li><a href="/style-guide/layout">Layout</a></li>
+		<li><a href="/style-guide/grid">Grid</a></li>
 		<li><a href="/style-guide/typography">Typography</a></li>
 		<li><a href="/style-guide/buttons">Buttons</a></li>
 		<li><a href="/style-guide/colour">Colour</a></li>
