Add breadcrumbs to all pages

--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -64,6 +64,16 @@
 
 		</div>
 
+		<h3 class="heading heading--separator">JavaScript</h3>
+
+		<div class="grid">
+
+			{{ item("Syntax", "/javascript/syntax", "Syntax, formatting, conventions and code structure") }}
+
+			{{ item("Documentation", "/javascript/docs", "Auto-generated JS code documentation") }}
+
+		</div>
+
 	</div>
 
 {% endblock %}
