--- a/web/server/views/javascript/docs.njk
+++ b/web/server/views/javascript/docs.njk
@@ -1,19 +1,13 @@
-{% extends "../layouts/_sidebar.njk" %}
+{% extends "./_javascript-layout.njk" %}
 {% set title = "JavaScript Documentation" %}
-
-{% block sidebar %}
-	JS Sidebar
-{% endblock %}
-
 
 {% block main %}
 
+	{% for item in data %}
 
-{% for item in data %}
+		<h2>{{item.name}}</h2>
+		<h3>Type: {{item.kind}}</h3>
 
-	<h2>{{item.name}}</h2>
-	<h3>Type: {{item.kind}}</h3>
-
-{% endfor %}
+	{% endfor %}
 
 {% endblock %}
