--- a/web/server/views/javascript/index.njk
+++ b/web/server/views/javascript/index.njk
@@ -1,7 +1,7 @@
-{% extends "../layouts/_layout.njk" %}
+{% extends "./_javascript-layout.njk" %}
 {% set title = "JavaScript" %}
 
-{% block body %}
+{% block main %}
 
 	<h1>JavaScript</h1>
 
